--- a/index.html
+++ b/index.html
@@ -336,19 +336,18 @@
         </div>
     </header>
 
-    <main class="container" role="main">
-        <!-- AdSense Header -->
-        <div class="ads-container" aria-label="Advertisement">
-            <!-- Google AdSense -->
-            <script async
-                src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-XXXXXXXXXXXXXXXX"
-                crossorigin="anonymous"></script>
-            <ins class="adsbygoogle" style="display:block; text-align:center;" data-ad-client="ca-pub-XXXXXXXXXXXXXXXX"
-                data-ad-slot="1234567890" data-ad-format="auto" data-full-width-responsive="true"></ins>
-            <script>
-                (adsbygoogle = window.adsbygoogle || []).push({});
-            </script>
-        </div>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1454614100861463"
+     crossorigin="anonymous"></script>
+<!-- TubeTag Generator | Top Ad -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-1454614100861463"
+     data-ad-slot="5144709957"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
 
         <div id="tag">
             Tag Generator
