--- a/index.html
+++ b/index.html
@@ -47,6 +47,10 @@
 
     <!-- Canonical URL -->
     <link rel="canonical" href="https://yourdomain.com/youtube-tag-generator">
+    
+<!--     Adsense By Site -->
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1454614100861463"
+     crossorigin="anonymous"></script>
 
     <style>
         /* Base Styles */
