--- a/index.html
+++ b/index.html
@@ -49,8 +49,7 @@
     <link rel="canonical" href="https://yourdomain.com/youtube-tag-generator">
     
 <!--     Adsense By Site -->
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1454614100861463"
-     crossorigin="anonymous"></script>
+    <meta name="google-adsense-account" content="ca-pub-1454614100861463">
 
     <style>
         /* Base Styles */
