--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html lang="en" itemscope itemtype="https://schema.org/WebApplication">
 <head>
-    <!--     Adsense By Site -->
+<!--     Adsense -->
     <meta name="google-adsense-account" content="ca-pub-1454614100861463">
+    
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=5.0">
     
