--- a/index.html
+++ b/index.html
@@ -388,18 +388,19 @@
             </ul>
         </section>
     </main>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1454614100861463"
-     crossorigin="anonymous"></script>
-<!-- TubeTag Generator | Top Ad -->
-<ins class="adsbygoogle"
-     style="display:block"
-     data-ad-client="ca-pub-1454614100861463"
-     data-ad-slot="5144709957"
-     data-ad-format="auto"
-     data-full-width-responsive="true"></ins>
-<script>
-     (adsbygoogle = window.adsbygoogle || []).push({});
-</script>
+<div class="ad-container">
+        <!-- Google AdSense code here -->
+      
+      
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1454614100861463"
+        crossorigin="anonymous"></script>
+    <!-- TubeTag Generator | Top Ad -->
+    <ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-1454614100861463" data-ad-slot="5144709957"
+        data-ad-format="auto" data-full-width-responsive="true"></ins>
+    <script>
+        (adsbygoogle = window.adsbygoogle || []).push({});
+    </script>
+    </div>
     <footer role="contentinfo">
         <div class="container">
             <nav class="footer-nav" aria-label="Footer Navigation">
