--- a/index.html
+++ b/index.html
@@ -336,6 +336,13 @@
                 gap: 0.8rem;
             }
         }
+
+/*         Adsense code CSS */
+        .ad-container {
+        width: 100%;
+        max-width: 100%;
+        overflow: hidden;
+}
     </style>
 </head>
 <body>
