--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="en" itemscope itemtype="https://schema.org/WebApplication">
 <head>
 <!--     Adsense -->
-    <meta name="google-adsense-account" content="ca-pub-1454614100861463">
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1454614100861463"
+        crossorigin="anonymous"></script>
     
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=5.0">
